# data-processor-python

./: .gitignore  README.md  backfill.py  check_data.py  class_diagram.puml  cron_job.py  deploy.sh  env.example  pyproject.toml  requirements.txt  run.sh
crypto_price_fetcher/: config.py  fetcher.py  main.py  storage_native.py
docs/: README.md  api-reference.md  developer-guide.md  migration-guide.md  quick-start.md
docs/architecture/: 01-system-overview.md  02-core-framework.md  03-pipeline-system.md  04-operations-deployment.md  05-testing-framework.md  06-data-flow-storage.md  07-security-reliability.md  08-extension-customization.md  README.md  class_diagram.puml
docs/change_logs/: 001_v2_0_0_architecture_refactoring.md  README.md
docs/diagrams/: README.md  class_diagram.puml  layered-architecture.puml  system-architecture.puml
docs/prompts/: README.md  prompts.md
migrations/: __init__.py  migration_manager.py
migrations/sql/: 001_create_cmc_latest_quotes_table.sql  001_create_migrations_table.sql  002_create_cmc_hourly_table.sql  002_create_financial_trades_latest_table.sql  003_create_cmc_daily_table.sql  004_create_cmc_weekly_table.sql  005_create_cmc_monthly_table.sql  006_create_cmc_yearly_table.sql  007_fix_cmc_latest_quotes_primary_key.sql  007_recreate_cmc_time_scoped_tables_float.sql
samples/examples/: __init__.py  weather_pipeline.py
scripts/: backfill.py  check_data.py  run.py  run_tests.py
scripts/setup/: setup_clickhouse.sql
src/: main.py
src/configurations/: config.py
tests/: README.md  __init__.py  conftest.py  run_tests.py
(+76 files in other folders)
